add title color

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Hello, world v9</h1>
+    <h1 class="title">Hello, world v9</h1>
 </body>
 
 </html>
